fix image stretch

--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,9 @@
 }
 img {
     display: block;
-    /* margin-left: auto;
-    margin-right: auto; */
     width: 400px;
     max-width: 100%;
-    height: fit-content;
+    height: auto;
     padding-top: 20px;
     padding-bottom: 20px;
    
